fixed view on safari

--- a/curves/static/curves/css/landing-page.css
+++ b/curves/static/curves/css/landing-page.css
@@ -73,8 +73,11 @@ h1 {
     text-align: center;
     width: 100%;
     height: 100%;
+    display: -webkit-flex;
     display: flex;
+    -webkit-justify-content: center;
     justify-content: center;
+    -webkit-align-items:center;
     align-items: center;
 }
 
